# moon

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  NOTES  README  README.darwin  TODO  acinclude.m4  autogen.sh  build-for-android.sh  build-for-moondroid.sh  build-for-osx.sh  configure.ac  demo-status.sh  demo-status.txt  ffmpeg.patch  moon.mdp  moon.mds  moon.pc.in  moonlight.spec.in  oMakefile  wishlist
cairo/test/: .gitignore  Makefile.am  Makefile.in  Makefile.sources  Makefile.win32  README  a1-image-sample.c  a1-mask.c  a1-traps-sample.c  a8-mask.c  alpha-similar.c  any2ppm.c  big-line.c  big-trap.c  bilevel-image.c  bitmap-font.c  buffer-diff.c  buffer-diff.h  cairo-test.c  cairo-test.h  caps-joins-alpha.c  caps-joins.c  caps-sub-paths.c  clip-all.c  clip-empty.c  clip-fill-rule-pixel-aligned.c  clip-fill-rule.c  clip-nesting.c  clip-operator.c  clip-push-group.c  clip-twice.c  clip-zero.c  clipped-group.c  clipped-surface.c  close-path.c  composite-integer-translate-over-repeat.c  composite-integer-translate-over.c  composite-integer-translate-source.c  copy-path.c  create-for-stream.c  (+177 more)
class/: .gitignore  ChangeLog  Consts.cs  Makefile.am
class/Microsoft.SilverlightControls/: ChangeLog  LICENSE.rtf  Makefile.am  Microsoft.SilverlightControls.mdp  README.MOON
class/Mono.Moonlight/: .gitignore  ChangeLog  Makefile  Makefile.am  Mono.Moonlight.dll.sources  Mono.Moonlight.mdp
class/Moon.Windows.Desktop/: .gitignore  Makefile.am
class/SecurityAttributes/: .gitignore  Makefile.am  README  audit.cs  detect-sc.cs  detect-ssc.cs  detect.cs  ivt-check.cs  ivt-detect.cs  merge.cs  sl-3-sdk.internals  sl-4-sdk.internals
class/System.Windows/: .gitignore  ChangeLog  Internal.cs  Makefile  Makefile.am  System.Windows.dll.config  System.Windows.dll.sources  System.Windows.mdp
class/System.Windows.Browser/: .gitignore  ChangeLog  Makefile  Makefile.am  System.Silverlight_test.dll.sources  System.Windows.Browser.dll.sources  System.Windows.Browser.mdp  System.Windows.Browser_test.dll.sources
class/System.Windows.Controls/: .gitignore  ChangeLog  Makefile.am
class/System.Windows.Controls.Data/: .gitignore  ChangeLog  Makefile.am
class/WPF.Toolkit/: ChangeLog
class/tuning/: .gitignore  ChangeLog  Makefile.am
data/: .gitignore  Makefile.am  agmono.pc.in  agmonosilver.pc.in  libmoonplugin.so-gdb.py  moon-browser-redist-assemblies.pc  moonlight-desktop-2.0.pc.in  silver.pc.in  silverdesktop.pc.in  silverlight-ff3-quirks.user.js
generators/: .gitignore  Annotation.cs  ChangeLog  FieldInfo.cs  Generator.cs  Generator.cs.in  GlobalInfo.cs  HeaderCollection.cs  Helper.cs  Log.cs  Makefile.am  MemberInfo.cs  MethodInfo.cs  ParameterInfo.cs  README  SignatureType.cs  TODO  Tokenizer.cs  TypeInfo.cs  TypeReference.cs  generators.mdp
gtk/: .gitignore  Assembly.cs  ChangeLog  CompositeHelper.cs  Makefile.am  ManagedDownloader.cs  desklets.cs  gtk.cs  gtksilver.pc.in  gtksilver.source  moonlight-gtk-2.0.pc.in  moonlight-gtk-4.0.pc.in  moonlight-gtk.pc.in  moonlight-gtk.snk  moonlight-gtk.source  mopen.cs  mopen.exe.config  mopen.in
gtk/Moonlight.Gtk/: AssemblyInfo.cs  Desklets.cs  ManagedDownloader.cs  MoonlightHost.cs  MoonlightRuntime.cs  XamlHost.cs  XamlRuntime.cs
gtk/docs/: .gitignore  Gtk.Moonlight.xml  index.xml  ns-Gtk.Moonlight.xml
perf/: .gitignore  ChangeLog  Makefile  Makefile.am  README  report.css  svn-dispatcher
perf/benchmark-runner/: Makefile  benchmark-runner.cpp
perf/perf-report/: .gitignore  helpers.js  report.css
perf/perf-suite-generator/: AssemblyInfo.cs  GraphGenerator.cs  HtmlGenerator.cs  Main.cs  Options.cs  PerfSuiteGenerator.cs  UtilFu.cs
perf/perf-suite-lib/: Database.cs  DbEntry.cs  ItemDbEntry.cs  PassDbEntry.cs  ResultDbEntry.cs  ResultWithDateDbEntry.cs
perf/perf-suite-runner/: AssemblyInfo.cs  DrtItem.cs  DrtResult.cs  DrtStore.cs  Main.cs  Options.cs  PerfSuiteRunner.cs  Result.cs
perf/perf-suite-set/: drtlist.xml  ftb-rendering-ref.html  ftb-rendering.html  purple-mystery.html  rotating-balls.html  rotating-paths.html  scaling-image.html  scaling-path.html  simple-blending.html  simple-text.html  storyboard-attack.html  stretched-blending.html
pixman/: .gitignore  Makefile.am  Makefile.in  README  TODO  autogen.sh  configure  configure.ac  pixman-1-uninstalled.pc
plugin/: .gitignore  ChangeLog  Makefile.am  README  TODO  browser-bridge.cpp  browser-bridge.h  browser-http.cpp  browser-http.h  browser-mmsh.cpp  browser-mmsh.h  cbinding.cpp  cbinding.h  config.h  debug.js  downloader.cpp  downloader.h  http-downloader.cpp  http-downloader.h  install.js  install.js.in  install.rdf.in  mms-downloader.cpp  mms-downloader.h  mmsh-state.cpp  mmsh-state.h  mono.cpp  moon-mono.cpp  moon-mono.h  moon-plugin-glue.cpp  moon-plugin.c  moon-plugin.cpp  moon-plugin.h  moon.config  moonlight.cs  moonlight.h  npstream-downloader.cpp  npstream-downloader.h  npstream-request.cpp  npstream-request.h  (+32 more)
runtime/: ChangeLog  Makefile.am
sdk/: .gitignore  ChangeLog  Makefile.am
src/: .gitignore  ChangeLog  Makefile.am  alpha-premul-table.inc  animation.cpp  animation.h  animation2.h  application.cpp  application.h  applier.cpp  applier.h  array.cpp  array.h  asxparser.cpp  asxparser.h  audio-alsa.cpp  audio-alsa.h  audio-opensles.cpp  audio-opensles.h  audio-pulse.cpp  audio-pulse.h  audio.cpp  audio.h  authors.h  binding.cpp  binding.h  bitmapcache.cpp  bitmapcache.h  bitmapimage.cpp  bitmapimage.h  bitmapsource.cpp  bitmapsource.h  border.cpp  border.h  brush.cpp  brush.h  canvas.cpp  canvas.h  capture.cpp  capture.h  (+341 more)
test/: .gitignore  ChangeLog  Makefile  Makefile.am  ManagedDownloader.cs  Web.config  control.cs  convert-drt.py  demo.cs  download.cs  drtlist.txt  drtlist.xml  effect-test.cpp  etest.xaml  gendarme.ignore  gendarme.xml  gtk.cs  index.aspx  make-xephyr  mydrtlist.xml  projection-test.cpp  saveMasters.py  test-custom-element.cs  test-run-explorer.aspx  test.mdp  test.xaml  uri-test.cpp  xamlize.aspx
tools/: .gitignore  ChangeLog  Makefile.am  README  launcher.in  tools.mdp  try-commit.sh
(+5294 files in other folders)
